--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
+    "vue-loading-overlay": "^4.0.3",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
