--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "leaflet": "^1.7.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-loading-overlay": "^4.0.3",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-leaflet": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
