--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "popper.js": "^1.16.1",
+    "vee-validate": "^3.4.9",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-loading-overlay": "^4.0.3",
