--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "popper.js": "^1.16.1",
+    "swiper": "^6.7.1",
     "vee-validate": "^3.4.9",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.2.4",
     "vue-loading-overlay": "^4.0.3",
     "vue-router": "^3.2.0",
