--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "emailjs-com": "^3.2.0",
     "google-spreadsheet": "^3.1.15",
+    "http2": "^3.3.7",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "popper.js": "^1.16.1",
