--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "caniuse-lite": "^1.0.30001727",
     "core-js": "^3.6.5",
     "emailjs-com": "^3.2.0",
     "google-spreadsheet": "^3.1.15",
